Fix submenu overflow below taskbar

--- a/css/theme.css
+++ b/css/theme.css
@@ -480,7 +480,7 @@ button.start-menu-item {
   display: none;
   position: absolute;
   left: 100%;
-  top: 0;
+  bottom: 0;
   min-width: 180px;
 }
 
